# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = qaseio
description = Qase TMS Python Api Client
author = Parviz Khavari
author-email = csctclan@gmail.com
license = apache
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/qase-tms/qase-python
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
namespace_packages = qaseio
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    python-apitist>=0.5.0
    attrs>=19.3.0
    cattrs>=1.0.0
python_requires = >=3.6

[options.packages.find]
where = src
include = qaseio.*
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    requests_mock

[test]
extras = True

[tool:pytest]
addopts =
    --cov qaseio --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
log_cli = True
log_cli_level = DEBUG

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = qaseio
extensions =
    pyproject
    markdown
    no_skeleton
    tox
