[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qase-api-client"
version = "2.0.1"
description = "Qase TestOps API V1 client for Python"
readme = "README.md"
authors = [{name = "Qase Team", email = "support@qase.io"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Typing :: Typed",
]
urls = {"Homepage" = "https://github.com/qase-tms/qase-python"}
keywords = ["OpenAPI", "OpenAPI-Generator", "Qase.io TestOps API"]
requires-python = ">=3.9"
dependencies = [
    "urllib3 >= 1.25.3, <= 2.5.0",
    "python-dateutil",
    "pydantic >= 2",
    "typing-extensions >= 4.7.1",
    "lazy-imports >= 1, < 2",
]

[project.optional-dependencies]
# Define any optional dependencies here if necessary

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.9
envlist = py{39,310,311,312,313}

[testenv]
deps =
    pytest
    pytest-cov
passenv =
    HOME
commands =
    pytest --cov-config=pyproject.toml {posargs}
extras =
    all
    testing
"""

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["test"]

[tool.flake8]
exclude = [".tox", "build", "dist", ".eggs"]

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = ["src/qase/api_client_v1"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = false
