# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = qase-pytest
description = Qase Pytest Plugin for Qase TestOps and Qase Report
author = Qase Team
author-email = support@qase.io
license = apache
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/qase-tms/qase-python/tree/master/qase-pytest
platforms = any
version = 5.0.2
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Pytest
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
namespace_packages = qaseio
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    qase-python-commons>=2.0.0,<2.1.0
    pytest>=7.2.0
    filelock~=3.10.7
    more_itertools
python_requires = >=3.7

[options.packages.find]
where = src
include = qaseio.*
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[options.entry_points]
pytest11 =
    pytest_qase = qaseio.pytest.conftest

[test]
extras = True

[tool:pytest]
addopts =
    --cov qaseio.pytest --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = qaseio.pytest
extensions =
    pyproject
    markdown
    no_skeleton
    tox
