[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qase-python-commons"
version = "2.0.8"
description = "A library for Qase TestOps and Qase Report"
readme = "README.md"
authors = [{name = "Qase Team", email = "support@qase.io"}]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
]
urls = {"Homepage" = "https://github.com/qase-tms/qase-python/tree/master/qase-python-commons"}
requires-python = ">=3.8"
dependencies = [
    "certifi>=2024.2.2",
    "qaseio>=4.0.0,<5.0.0",
    "attrs>=23.2.0",
    "more_itertools"
]

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov",
    "mock",
    "more_itertools",
    "requests",
    "urllib3",
]

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.8
envlist = py{38,39,310,311}

[testenv]
deps =
    pytest
    pytest-cov
passenv =
    HOME
commands =
    pytest --cov-config=pyproject.toml {posargs}
extras =
    all
    testing 
"""

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "--cov-report=term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.flake8]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.coverage.run]
branch = true

[tool.coverage.paths]
source = ["src/qaseio/commons"]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_also = [
    # Don't complain about missing debug-only code:
    "def __repr__",
    "if self\\.debug",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",

    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
    ]

ignore_errors = false