[metadata]
name = qase-python-commons
description = A library for Qase TestOps and Qase Report
author = Qase Team
author-email = support@qase.io
license = apache
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/qase-tms/qase-python/tree/master/qase-python-commons
platforms = any
version = 2.0.3
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
namespace_packages = qaseio
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
install_requires =
    certifi>=2022.12.7
    qaseio>=3.2.1
    attrs>=19.3.0
    more_itertools
python_requires = >=3.7

[options.packages.find]
where = src
include = qaseio.*
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov
    mock
    more_itertools
    requests
    urllib3

[test]
extras = True

[tool:pytest]
addopts =
    --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = qaseio.commons
