# This file is used to configure your project.
# Read more about the various options under:
# http://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files

[metadata]
name = qase-robotframework
description = Qase Robot Framework Listener
author = Qase Team
author_email = support@qase.io
license = apache
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
url = https://github.com/qase-tms/qase-python/tree/master/qase-robotframework
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Programming Language :: Python

[options]
zip_safe = False
packages = find_namespace:
namespace_packages = qaseio
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    qase-python-commons>=1.0.2
python_requires = >=3.7

[options.packages.find]
where = src
include = qaseio.*
exclude =
    tests

[options.extras_require]
testing =
    pytest
    pytest-cov

[test]
extras = True

[tool:pytest]
addopts =
    --cov qaseio --cov-report term-missing
    --verbose
norecursedirs =
    dist
    build
    .tox
testpaths = tests
log_cli = True
log_cli_level = DEBUG

[aliases]
dists = bdist_wheel

[bdist_wheel]
universal = 1

[build_sphinx]
source_dir = docs
build_dir = build/sphinx

[devpi:upload]
no-vcs = 1
formats = bdist_wheel

[flake8]
exclude =
    .tox
    build
    dist
    .eggs
    docs/conf.py

[pyscaffold]
# PyScaffold's parameters when the project was created.
# This will be used when updating. Do not change!
version = 3.2.3
package = qaseio
extensions =
    pyproject
    markdown
    no_skeleton
    tox
