[tool.poetry]
name = "qaseio"
version = "4.0.0"
description = "Qase TestOps API"
authors = ["Qase.io <support@qase.io>"]
license = "Apache 2.0"
readme = "README.md"
repository = "https://github.com/GIT_USER_ID/GIT_REPO_ID"
keywords = ["OpenAPI", "OpenAPI-Generator", "Qase.io TestOps API"]
include = ["qaseio/py.typed"]

[tool.poetry.dependencies]
python = "^3.7"

urllib3 = ">= 1.25.3"
python-dateutil = ">=2.8.2"
pydantic = ">=2"
typing-extensions = ">=4.7.1"

[tool.poetry.dev-dependencies]
pytest = ">=7.2.2"
tox = ">=3.9.0"
flake8 = ">=4.0.0"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
